# Pomodoro

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  dependency.py  docker-compose.test.yml  docker-compose.yml  exception.py  fixtures.py  pomodoro.sqlite  pyproject.toml  settings.py
.github/workflows/: .github.ci.yml
alembic/: env.py
alembic/versions/: 267dab645d66_access_token.py  5beb25a91d70_extend_user_profile.py  8bc11bcf4cd1_user_id_in_tasks.py  8c79a941b665_user_init.py  a8ced113559d_access_token_nullable.py  b2065be4e539_ref_user_profile.py  b610cc0b4824_yandex_access_token.py  b95166e835a0_init.py  c5bc5086f214_access_token_nullable.py  d321d8484e38_access_token.py  e0840bcb48e2_category_type.py  faaf2ccca8e7_user_id_in_tasks.py
app/: consumer.py  dependency.py  main.py  settings.py
app/Infrastructure/broker/: accessor.py
app/Infrastructure/cache/: __init__.py  accessor.py
app/Infrastructure/database/: __init__.py  accessor.py
app/broker/: consumer.py  producer.py
app/client/: __init__.py  google.py  yandex.py
app/handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
app/models/: __init__.py
app/repository/: __init__.py  cache_task.py  task.py  user.py
app/schema/: __init__.py  auth.py  task.py
app/service/: __init__.py  auth.py  task.py  user.py
app/tasks/: handlers.py  models.py  schema.py  service.py
app/tasks/repository/: __init__.py  cache_task.py  task.py
app/users/auth/: handlers.py  schema.py  service.py
app/users/user_profile/: handlers.py  models.py  repository.py  service.py
cache/: __init__.py  accessor.py
client/: __init__.py  google.py  yandex.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: __init__.py  tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schema/: __init__.py  auth.py  task.py  user.py
service/: __init__.py  auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: infrastructure.py  settings.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/users/: user_model.py  (+1 more)
worker/: celery.py
workflows/: .github.ci.yml
(+6 files in other folders)
