[project]
name = "pomodoro-poetry"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "redis (>=7.4.0,<8.0.0)",
    "response (>=0.5.0,<0.6.0)",
    "requests (>=2.34.2,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.5.1,<4.0.0)",
    "pytest[async] (>=9.0.3,<10.0.0)",
    "pytest-twisted (>=1.14.3,<2.0.0)",
    "twisted (>=26.4.0,<27.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "aio-pika (>=9.6.2) ; python_version >= \"3.14\" and python_version < \"4\"",
    "aiokafka (>=0.14.0,<0.15.0)",
]

[tool.poetry]
packages = [{ include = "pomodoro_poetry", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-factoryboy (>=2.8.1,<3.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]